# tokenferno

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/templates/: tokenferno.rb.tmpl
.github/workflows/: audit.yml  ci.yml  release.yml
Formula/: tokenferno.rb
examples/: render_dump.rs  timeline.rs
src/: aggregate.rs  exec.rs  ipc.rs  lib.rs  main.rs  model.rs  persist.rs
src/ingest/: claude.rs  copilot.rs  fswatch.rs  mod.rs
src/ui/: burn_meter.rs  dashboard.rs  doomfire.rs  fun.rs  mod.rs
tests/: latency_probe.rs
